# splitlink

./: .env.example  CHANGELOG.md  Dockerfile  LICENSE  README.md  minimal_test.yml  pyproject.toml
.github/: ci_test_marker  ping_test  test_ci.yml  workflows.yml
frontend/: index.html
src/app/deep/: test.txt
src/splitlink/: main.py
src/splitlink/api/: link.py
src/splitlink/core/: config.py  db.py
src/splitlink/schemas/: link.py
src/splitlink/services/: link_service.py
tests/: test_api.py
