[build-system]
requires = ["hatchling"]
build-backend = "hatchling"

[project]
name = "splitlink"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "httpx>=0.27",
    "aiosqlite>=0.20",
    "loguru>=0.7"
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "httpx"
]

[tool.hatch.build.targets.wheel]
packages = ["src/splitlink"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.envs.dev]
dependencies = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "httpx"
]
scripts = [
    "test = pytest"
]